--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,22 +1,49 @@
 <mat-card style="padding: 16px">
-  <mat-toolbar color="secondary">
+  <mat-toolbar color="secondary" style="display: flex; justify-content:space-between">
     <h1>Available courses</h1>
+    <button mat-mini-fab color="accent" aria-label="Add Course" (click)="onAdd()">
+      <mat-icon>add</mat-icon>
+    </button>
   </mat-toolbar>
 
   <section *ngIf="courses$ | async as courses; else loading">
     <table mat-table [dataSource]="courses" class="mat-elevation-z8" style="padding: 16px">
+      <!-- Id column -->
+      <ng-container matColumnDef="_id">
+        <th mat-header-cell *matHeaderCellDef>#</th>
+        <td mat-cell *matCellDef="let course"> {{ course._id }}</td>
+      </ng-container>
+
       <!-- Name column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Course</th>
+        <th mat-header-cell *matHeaderCellDef>Course</th>
         <td mat-cell *matCellDef="let course"> {{ course.name }}</td>
       </ng-container>
 
       <!-- Category column -->
       <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef> Category</th>
+        <th mat-header-cell *matHeaderCellDef>Category</th>
         <td mat-cell *matCellDef="let course">
-          {{ course.category }}
-          <mat-icon aria-hidden="false" aria-label="Category of Course" >{{ course.category | category }}</mat-icon>
+          <span class="category-container">
+            {{ course.category }}
+            <mat-icon aria-hidden="false" aria-label="Category of Course">{{ course.category | category }}</mat-icon>
+          </span>
+        </td>
+      </ng-container>
+
+      <!-- Actions column -->
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>
+          Actions
+        </th>
+        <td mat-cell *matCellDef="let course">
+          <button mat-icon-button color="primary" aria-label="Edit Course">
+            <mat-icon>edit</mat-icon>
+          </button>
+
+          <button mat-icon-button color="warn" aria-label="Remove Course">
+            <mat-icon>delete</mat-icon>
+          </button>
         </td>
       </ng-container>
 
