Refactor course components into containers and components
Course components have been refactored into 'containers' and 'components' directories for better organization and maintainability. File paths in the project have been updated to reflect the new structure. Additional changes include updating the 'courses list' component to use an EventEmitter to handle navigation.

--- a/src/app/courses/containers/courses/courses.component.html
+++ b/src/app/courses/containers/courses/courses.component.html
@@ -5,7 +5,12 @@
       <h1>Available courses</h1>
     </mat-toolbar>
 
-    <app-courses-list *ngIf="courses$ | async as courses; else loading" [courses]="courses"></app-courses-list>
+    <app-courses-list
+      (addCourse)="onAdd()"
+      *ngIf="courses$ | async as courses; else loading"
+      [courses]="courses"
+    >
+    </app-courses-list>
 
     <ng-template #loading>
       <section class="loading-spinner">
