--- a/src/app/courses/containers/courses/courses.component.html
+++ b/src/app/courses/containers/courses/courses.component.html
@@ -7,6 +7,7 @@
 
     <app-courses-list
       (addCourse)="onAdd()"
+      (editCourse)="onEdit($event)"
       *ngIf="courses$ | async as courses; else loading"
       [courses]="courses"
     >
