--- a/src/app/courses/components/courses-list/courses-list.component.html
+++ b/src/app/courses/components/courses-list/courses-list.component.html
@@ -34,7 +34,7 @@
         <mat-icon>edit</mat-icon>
       </button>
 
-      <button aria-label="Remove Course" color="warn" mat-icon-button>
+      <button (click)="onDelete(course)" aria-label="Remove Course" color="warn" mat-icon-button>
         <mat-icon>delete</mat-icon>
       </button>
     </mat-cell>
