--- a/src/app/courses/containers/course-form/course-form.component.html
+++ b/src/app/courses/containers/course-form/course-form.component.html
@@ -6,7 +6,9 @@
   <mat-card-content class="">
     <form [formGroup]="form" class="min-width">
       <mat-form-field class="full-width">
-        <input matInput placeholder="Name" formControlName="name">
+        <input #name formControlName="name" matInput placeholder="Name">
+        <mat-hint align="end">{{ name.value?.length || 0 }} / 100</mat-hint>
+        <mat-error *ngIf="form.get('name')?.invalid">{{ getErrorMessage('name') }}</mat-error>
       </mat-form-field>
 
       <mat-form-field class="full-width">
@@ -15,6 +17,8 @@
           <mat-option value="front-end">Front-End</mat-option>
           <mat-option value="back-end">Back-End</mat-option>
         </mat-select>
+        <mat-error *ngIf="form.get('category')?.invalid">{{ getErrorMessage('category') }}</mat-error>
+
       </mat-form-field>
     </form>
   </mat-card-content>
