--- a/src/app/courses/containers/course-form/course-form.component.html
+++ b/src/app/courses/containers/course-form/course-form.component.html
@@ -6,9 +6,11 @@
   <mat-card-content class="">
     <form [formGroup]="form" class="min-width">
       <mat-form-field class="full-width">
-        <input #name formControlName="name" matInput placeholder="Name">
-        <mat-hint align="end">{{ name.value?.length || 0 }} / 100</mat-hint>
-        <mat-error *ngIf="form.get('name')?.invalid">{{ getErrorMessage('name') }}</mat-error>
+        <input #name formControlName="name" matInput placeholder="Name" maxlength="100" minlength="3">
+        <mat-hint align="end">{{ name.value.length || 0 }} / 100</mat-hint>
+        @if (form.get('name')?.invalid) {
+          <mat-error>{{ getErrorMessage('name') }}</mat-error>
+        }
       </mat-form-field>
 
       <mat-form-field class="full-width">
@@ -17,8 +19,9 @@
           <mat-option value="front-end">Front-End</mat-option>
           <mat-option value="back-end">Back-End</mat-option>
         </mat-select>
-        <mat-error *ngIf="form.get('category')?.invalid">{{ getErrorMessage('category') }}</mat-error>
-
+        @if (form.get('category')?.invalid) {
+          <mat-error>{{ getErrorMessage('category') }}</mat-error>
+        }
       </mat-form-field>
     </form>
   </mat-card-content>
