--- a/src/app/courses/containers/course-form/course-form.component.html
+++ b/src/app/courses/containers/course-form/course-form.component.html
@@ -16,8 +16,8 @@
       <mat-form-field class="full-width">
         <mat-label>Category</mat-label>
         <mat-select formControlName="category">
-          <mat-option value="front-end">Front-End</mat-option>
-          <mat-option value="back-end">Back-End</mat-option>
+          <mat-option value="Front-End">Front-End</mat-option>
+          <mat-option value="Back-End">Back-End</mat-option>
         </mat-select>
         @if (form.get('category')?.invalid) {
           <mat-error>{{ getErrorMessage('category') }}</mat-error>
